The base repository and its query repository (design pattern) has been completed.

--- a/src/Infrastructure/TechECommerceServer.Persistence/TechECommerceServer.Persistence.csproj
+++ b/src/Infrastructure/TechECommerceServer.Persistence/TechECommerceServer.Persistence.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Core\TechECommerceServer.Application\TechECommerceServer.Application.csproj" />
     <ProjectReference Include="..\..\Core\TechECommerceServer.Domain\TechECommerceServer.Domain.csproj" />
   </ItemGroup>
 
