The first (CreateProduct) action of the ProductsController was tested [with configurations of CQRS and mediatR patterns].

--- a/src/Presentation/TechECommerceServer.API/TechECommerceServer.API.csproj
+++ b/src/Presentation/TechECommerceServer.API/TechECommerceServer.API.csproj
@@ -15,6 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Core\TechECommerceServer.Application\TechECommerceServer.Application.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\TechECommerceServer.Infrastructure\TechECommerceServer.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Infrastructure\TechECommerceServer.Persistence\TechECommerceServer.Persistence.csproj" />
   </ItemGroup>
 
