--- a/src/Core/TechECommerceServer.Application/TechECommerceServer.Application.csproj
+++ b/src/Core/TechECommerceServer.Application/TechECommerceServer.Application.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.1" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
     <PackageReference Include="SendGrid" Version="9.29.3" />
   </ItemGroup>
