--- a/src/Presentation/TechECommerceServer.API/TechECommerceServer.API.csproj
+++ b/src/Presentation/TechECommerceServer.API/TechECommerceServer.API.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\..\Infrastructure\TechECommerceServer.Persistence\TechECommerceServer.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
