--- a/src/Presentation/TechECommerceServer.API/appsettings.Development.json
+++ b/src/Presentation/TechECommerceServer.API/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "Default": "User ID=postgres; Password=123456; Host=localhost; Port=5432; Database=TechECommerceServerDb;"
+  },
+  "BaseUrls": {
+    "BaseLocalStorageUrl": "https://localhost:44368"
   }
 }
