--- a/src/Infrastructure/TechECommerceServer.Infrastructure/TechECommerceServer.Infrastructure.csproj
+++ b/src/Infrastructure/TechECommerceServer.Infrastructure/TechECommerceServer.Infrastructure.csproj
@@ -9,8 +9,11 @@
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 		<PackageReference Include="AutoMapper" Version="13.0.1" />
+		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.6" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="StackExchange.Redis" Version="2.7.33" />
 	</ItemGroup>
 
 	<ItemGroup>
