--- a/src/Presentation/TechECommerceServer.API/appsettings.Development.json
+++ b/src/Presentation/TechECommerceServer.API/appsettings.Development.json
@@ -8,6 +8,12 @@
   "ConnectionStrings": {
     "Default": "User ID=postgres; Password=123456; Host=localhost; Port=5432; Database=TechECommerceServerDb;"
   },
+  "Cache": {
+    "DefaultSettings": {
+      "ConnectionString": "localhost, abortConnect=false",
+      "InstanceName": "TechECommerceServerCache"
+    }
+  },
   "BaseUrls": {
     "BaseLocalStorageUrl": "https://localhost:44368"
   }
