Integration of Azure blob storage service was completed.

--- a/src/Presentation/TechECommerceServer.API/appsettings.Development.json
+++ b/src/Presentation/TechECommerceServer.API/appsettings.Development.json
@@ -14,6 +14,10 @@
       "InstanceName": "TechECommerceServerCache"
     }
   },
+  "Storage": {
+    // note: for these types of keys/connection strings, priority is given to 'client secret' for safe storage purposes!
+    "AzureStorage": ""
+  },
   "BaseUrls": {
     "BaseLocalStorageUrl": "https://localhost:44368"
   }
