Addition of new query action [GetMatchedImagesByProductId].

--- a/src/Presentation/TechECommerceServer.API/appsettings.Development.json
+++ b/src/Presentation/TechECommerceServer.API/appsettings.Development.json
@@ -19,6 +19,7 @@
     "AzureStorage": ""
   },
   "BaseUrls": {
-    "BaseLocalStorageUrl": "https://localhost:44368"
+    "BaseLocalStorageUrl": "https://localhost:44368",
+    "BaseAzureStorageUrl": "https://techecommerceserver.blob.core.windows.net"
   }
 }
