--- a/src/Core/TechECommerceServer.Application/TechECommerceServer.Application.csproj
+++ b/src/Core/TechECommerceServer.Application/TechECommerceServer.Application.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="MediaBrowser.Common" Version="4.8.5" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
     <PackageReference Include="SendGrid" Version="9.29.3" />
