Architecturally, JWT structure and configuration were completed.

--- a/src/Presentation/TechECommerceServer.API/appsettings.Development.json
+++ b/src/Presentation/TechECommerceServer.API/appsettings.Development.json
@@ -14,6 +14,13 @@
       "InstanceName": "TechECommerceServerCache"
     }
   },
+  "JWT": {
+    "Token": {
+      "Audience": "https://localhost:44368",
+      "Issuer": "https://localhost:44368",
+      "SecurityKey": "q88zXquLPrkPQab8eHmkRX3g+XOdpW8esjuJcxk/ObI="
+    }
+  },
   "Storage": {
     // note: for these types of keys/connection strings, priority is given to 'client secret' for safe storage purposes!
     "AzureStorage": ""
