Addition of new command action [GoogleLogInAppUser (OAuth login)].

--- a/src/Presentation/TechECommerceServer.API/appsettings.Development.json
+++ b/src/Presentation/TechECommerceServer.API/appsettings.Development.json
@@ -25,6 +25,13 @@
     // note: for these types of keys/connection strings, priority is given to 'client secret' for safe storage purposes!
     "AzureStorage": ""
   },
+  "ExternalLoginSettings": {
+    "OAuth": {
+      "Google": {
+        "ClientId": "558906886543-dd66tf48eb3874537lcjho6f2mhnh8pk.apps.googleusercontent.com"
+      }
+    }
+  },
   "BaseUrls": {
     "BaseLocalStorageUrl": "https://localhost:44368",
     "BaseAzureStorageUrl": "https://techecommerceserver.blob.core.windows.net"
