Addition of new command action [FacebookLogInAppUser (OAuth login)].

--- a/src/Presentation/TechECommerceServer.API/appsettings.Development.json
+++ b/src/Presentation/TechECommerceServer.API/appsettings.Development.json
@@ -28,7 +28,13 @@
   "ExternalLoginSettings": {
     "OAuth": {
       "Google": {
+        "Provicer": "GOOGLE",
         "ClientId": "558906886543-dd66tf48eb3874537lcjho6f2mhnh8pk.apps.googleusercontent.com"
+      },
+      "Facebook": {
+        "Provider": "FACEBOOK",
+        "ClientId": "3692538531013799",
+        "ClientSecret": "dcf3d016e412743ca0aa5976cb2ca852"
       }
     }
   },
