--- a/src/Core/TechECommerceServer.Application/TechECommerceServer.Application.csproj
+++ b/src/Core/TechECommerceServer.Application/TechECommerceServer.Application.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="SendGrid" Version="9.29.3" />
   </ItemGroup>
 
