Refactoring process of the command action [CreateAppUser].

--- a/src/Presentation/TechECommerceServer.API/appsettings.Development.json
+++ b/src/Presentation/TechECommerceServer.API/appsettings.Development.json
@@ -28,7 +28,7 @@
   "ExternalLoginSettings": {
     "OAuth": {
       "Google": {
-        "Provicer": "GOOGLE",
+        "Provider": "GOOGLE",
         "ClientId": "558906886543-dd66tf48eb3874537lcjho6f2mhnh8pk.apps.googleusercontent.com"
       },
       "Facebook": {
