Refactoring process of the command action [FacebookLogInAppUser].

--- a/src/Presentation/TechECommerceServer.API/appsettings.Development.json
+++ b/src/Presentation/TechECommerceServer.API/appsettings.Development.json
@@ -34,7 +34,8 @@
       "Facebook": {
         "Provider": "FACEBOOK",
         "ClientId": "3692538531013799",
-        "ClientSecret": "dcf3d016e412743ca0aa5976cb2ca852"
+        "ClientSecret": "dcf3d016e412743ca0aa5976cb2ca852",
+        "GrantType": "client_credentials"
       }
     }
   },
