Logging operations with Serilog and log visualization operations with Seq were integrated into the project.

--- a/src/Presentation/TechECommerceServer.API/appsettings.Development.json
+++ b/src/Presentation/TechECommerceServer.API/appsettings.Development.json
@@ -39,6 +39,9 @@
       }
     }
   },
+  "Seq": {
+    "ServerUrl": "http://localhost:5341"
+  },
   "BaseUrls": {
     "BaseLocalStorageUrl": "https://localhost:44368",
     "BaseAzureStorageUrl": "https://techecommerceserver.blob.core.windows.net"
