An addition of the new command action [PasswordReset] and its components.

--- a/src/Presentation/TechECommerceServer.API/appsettings.Development.json
+++ b/src/Presentation/TechECommerceServer.API/appsettings.Development.json
@@ -44,6 +44,9 @@
   },
   "BaseUrls": {
     "BaseLocalStorageUrl": "https://localhost:44368",
-    "BaseAzureStorageUrl": "https://techecommerceserver.blob.core.windows.net"
+    "BaseAzureStorageUrl": "https://techecommerceserver.blob.core.windows.net",
+    "ClientUrls": {
+      "AngularClientUrl": "http://localhost:4200"
+    }
   }
 }
